objects/ssot__PartyRelatedParty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeclarationType__c</fullName>
        <label>Declaration Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HierarchyType__c</fullName>
        <label>Hierarchy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Related Party Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsIncludedInGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Included In Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSelfRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Self Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsShareholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Shareholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRelationshipTypeId__c</fullName>
        <label>Party Relationship Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedFromDate__c</fullName>
        <label>Related From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedInverseRecordId__c</fullName>
        <label>Related Inverse Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPartyId__c</fullName>
        <label>Related Party</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToDate__c</fullName>
        <label>Related To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ShareholderHierarchyLevel__c</fullName>
        <label>Shareholder Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShareholderHierarchyRole__c</fullName>
        <label>Shareholder Hierarchy Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShareholderType__c</fullName>
        <label>Shareholder Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSharePercent__c</fullName>
        <label>Total Share Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825196198_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyRelatedParty_PartyId_map_Party__rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyRelatedParty_PartyId_map_Party__rel</relationshipLabel>
        <relationshipName>rel_1726825196198_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825203914_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyRelatedParty_RelatedPartyId_map_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyRelatedParty_RelatedPartyId_map_rel</relationshipLabel>
        <relationshipName>rel_1726825203914_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825206671_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyRelatedParty_RelatedInverseReco_rel</label>
        <referenceTo>ssot__PartyRelatedParty__dlm</referenceTo>
        <relationshipLabel>PartyRelatedParty_RelatedInverseReco_rel</relationshipLabel>
        <relationshipName>rel_1726825206671_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>